--- a/usr/share/applications/mintsysadm-users.desktop
+++ b/usr/share/applications/mintsysadm-users.desktop
@@ -8,3 +8,4 @@ X-MultipleArgs=false
 Type=Application
 Categories=GNOME;GTK;System;Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;XFCE;X-XFCE-SettingsDialog;X-XFCE-SystemSettings;
 X-GNOME-Settings-Panel=system-administration
+NotShowIn=GNOME;KDE;XFCE;MATE;
