--- a/usr/share/applications/mintsysadm.desktop
+++ b/usr/share/applications/mintsysadm.desktop
@@ -94,3 +94,4 @@ Type=Application
 Categories=GNOME;GTK;System;Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;XFCE;X-XFCE-SettingsDialog;X-XFCE-SystemSettings;
 X-GNOME-Settings-Panel=system-administration
 MimeType=text/x-apt-sources-list;
+Keywords=boot;grub;
