Add a user configuration tool

--- a/usr/share/applications/mintsysadm-users.desktop
+++ b/usr/share/applications/mintsysadm-users.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Users and Groups
-Comment=Add or remove users and groups
+Name=Users
+Comment=Add or remove users
 Exec=pkexec mintsysadm --users
 Icon=system-users
 Terminal=false
@@ -9,3 +9,4 @@ Type=Application
 Categories=GNOME;GTK;System;Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;XFCE;X-XFCE-SettingsDialog;X-XFCE-SystemSettings;
 X-GNOME-Settings-Panel=system-administration
 NotShowIn=GNOME;KDE;XFCE;MATE;
+Keywords=users;accounts;
