--- a/usr/share/applications/mintsysadm.desktop
+++ b/usr/share/applications/mintsysadm.desktop
@@ -86,6 +86,7 @@ Comment[uk]=Налаштувати систему
 Comment[vi]=Cấu hình hệ thống
 Comment[zh_CN]=配置系统
 Comment[zh_TW]=設定系統
+Keywords=system;administration;boot;grub;
 Exec=pkexec mintsysadm
 Icon=mintsysadm
 Terminal=false
