Add user management (#4)
* Start adding a users page and let the app show a specific page

* Add a users page

* Add a user configuration tool

* settings_user: Improve the password dialog

* Optimizations

* Add keywords in desktop files

--- a/usr/share/applications/mintsysadm.desktop
+++ b/usr/share/applications/mintsysadm.desktop
@@ -86,6 +86,7 @@ Comment[uk]=Налаштувати систему
 Comment[vi]=Cấu hình hệ thống
 Comment[zh_CN]=配置系统
 Comment[zh_TW]=設定系統
+Keywords=system;administration;boot;grub;
 Exec=pkexec mintsysadm
 Icon=mintsysadm
 Terminal=false
@@ -93,5 +94,3 @@ X-MultipleArgs=false
 Type=Application
 Categories=GNOME;GTK;System;Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;XFCE;X-XFCE-SettingsDialog;X-XFCE-SystemSettings;
 X-GNOME-Settings-Panel=system-administration
-MimeType=text/x-apt-sources-list;
-Keywords=boot;grub;
