Clean up password verification

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Depends: python3-gi,
          python3-xapp,
          python3-pexpect,
          python3-pil,
-         python3-pam,
+         python3-pampy,
          python3-setproctitle,
          aptkit,
          streamer,
