--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,12 @@ Architecture: all
 Depends: python3-gi,
          python3-gi-cairo,
          python3-xapp,
+         python3-opencv,
          python3-pexpect,
          python3-pil,
          python3-pampy,
          python3-setproctitle,
          aptkit,
-         streamer,
          gir1.2-accountsservice-1.0,
          gir1.2-gdkpixbuf-2.0,
          gir1.2-glib-2.0,
