--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,6 @@ Architecture: all
 Depends: python3-gi,
          python3-gi-cairo,
          python3-xapp,
-         python3-opencv,
          python3-pexpect,
          python3-pil,
          python3-pampy,
@@ -18,6 +17,7 @@ Depends: python3-gi,
          gir1.2-accountsservice-1.0,
          gir1.2-gdkpixbuf-2.0,
          gir1.2-glib-2.0,
+         gir1.2-gstreamer-1.0,
          gir1.2-gtk-3.0,
          gir1.2-pango-1.0,
          gir1.2-xapp-1.0,
